mt-ui/src/styles.css
/* You can add global styles to this file, and also import other style files */
/* light mode */
/* @import '~@angular/material/prebuilt-themes/indigo-pink.css'; */
@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';

/* dark mode */
/* @import '~@angular/material/prebuilt-themes/pink-bluegrey.css'; */
/* @import '~@angular/material/prebuilt-themes/purple-green.css'; */
html {
  font-size: 16px;
}

body {
  font-family: Roboto, Arial, sans-serif;
  margin: 0;
}

.centered {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
}

.nav-back {
  text-align: left !important;
  padding-left: 0px !important;
  margin-bottom: 10px !important;
  margin-top: 10px !important;
}

.mat-expansion-panel {
  border-radius: 0px !important;
}

/* .mat-stepper-horizontal, .mat-stepper-vertical {
  background-color: #fafafa;
} */
/* start of table */
table {
  width: 100%;
}

.mat-form-field {
  font-size: 14px;
  width: 100%;
}

.table-container {
  overflow: auto;
}

td,
th {
  padding-right: 10px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  padding-right: 8px !important;
}

/* end of table */

.mat-bottom-sheet-container-medium {
  min-width: auto !important;
  max-width: none !important;
  width: 96vw;
  height: 80vh !important;
}

.mat-bottom-sheet-container-large {
  min-width: auto !important;
  max-width: none !important;
  width: 96vw;
  height: 80vh !important;
}

.mat-bottom-sheet-container-xlarge {
  min-width: auto !important;
  max-width: none !important;
  width: 96vw;
  height: 80vh !important;
}

.mat-bottom-sheet-container {
  min-width: 96vw;
}

.flex-row-space-between {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.fix-height {
  height: 80vh !important;
}

.app-btn {
  width: 100%;
}

.table-icon {
  width: 25px;
  cursor: pointer;
}

th.mat-sort-header-sorted {
  color: black;
}

.mat-chip-list-wrapper {
  flex-wrap: nowrap !important;
  display: block !important;
  margin: 0px !important;
}

.mat-menu-panel {
  max-height: 300px !important;
}

.mat-form-field-infix {
  width: auto !important;
}

.marker-boarder .form-body {
  margin-bottom: 24px !important;
  border-left: 2px solid #673ab7 !important;
}

.mat-menu-panel {
  overflow-x: hidden !important;
}

.mat-menu-panel {
  max-width: 372px !important;
}

.mat-menu-content:not(:empty) {
  padding-top: 0px !important;
  padding-bottom: 0px !important;
}



.mat-expansion-panel-header.mat-expanded {
  height: 48px;
}

/* for nav bar */
.mat-expansion-panel-body {
  padding: 0 24px 8px !important;
}

.mat-required {
  color: #f44336;
  padding-left: 4px;
}

.text-disabled {
  color: rgba(0, 0, 0, .54);
}

.default-form-background {
  max-width: 960px;
  margin: 0px auto;
  padding: 20px 24px 50px 24px;
  background-color: #ffffff;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
}

.login-page .mat-tab-label {
  height: 36px;
  padding: 0 0px;
  cursor: pointer;
  box-sizing: border-box;
  opacity: .6;
  min-width: auto;
  text-align: center;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  margin-right: 24px;
}

.login-page .mat-form-field-flex {
  display: inline-flex;
  align-items: end;
  box-sizing: border-box;
  width: 100%;
}

/* for small screen */
@media only screen and (max-width: 600px) {
  .default-background {
    margin: 0px auto;
    padding: 12px 0px 50px 0px;
  }

  .default-form-background {
    margin: 0px auto;
    padding: 8px 16px 50px 16px;
    background-color: #ffffff;
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
  }

  .basic-info {
    display: flex;
    flex-direction: column;
    margin: 12px 0px;
  }

  .basic-info-title {
    margin-bottom: 16px;
    font-weight: 500;
  }
  .mobile-view-modal {
    min-width: 240px
  }
}

/* for large screen */
@media only screen and (min-width: 600px) {
  .default-background {
    max-width: 960px;
    margin: 0px auto;
    padding: 20px 24px 50px 24px;
  }

  .default-form-background {
    max-width: 960px;
    margin: 0px auto;
    padding: 20px 24px 50px 24px;
    background-color: #ffffff;
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
  }

  .basic-info {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 36px 0px;
  }

  .basic-info-content {
    width: 536px;
  }
  .mobile-view-modal {
    min-width: 400px
  }
}

